[package]
name = "drand-rs"
version = "0.1.0"
authors = ["prataprc <prataprc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.2"
sha2 = "0.9.1"
paired = "0.20.1"
groupy = "0.3.0"
reqwest = { version = "0.10.8", features = ["json"] }
serde = { version = "1.0.116", features = ["derive"] }
