[package]
name = "drand"
version = "0.0.1"
authors = ["prataprc <prataprc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
sha2 = "0.9.1"
reqwest = { version = "0.10.8", features = ["json"] }
serde = { version = "1.0.116", features = ["derive"] }
drand-verify = { git = "https://github.com/CosmWasm/drand-verify" }
futures = "0.3.5"
tokio = "0.2"

[dev-dependencies]
hex-literal = "*"
